# mutagen

./: .travis.yml  Cargo.toml  appveyor.yml  generate_protobuf.sh
cmd/mutagen/: common.go  create.go  edit.go  list.go  main.go
examples/custom-protocol/server/: server.go
examples/custom-protocol/transport/: transport.go
examples/kubectl/: mutagen-transport-kubectl
pkg/agent/: dial.go
pkg/custom/: protocol.go
pkg/filesystem/: syscall_posix.go
pkg/protocols/custom/: doc.go  prompt.go  protocol.go
pkg/remote/: endpoint_client.go
pkg/url/: format.go  format_test.go  parse.go  parse_custom.go  parse_test.go  url.go  url.pb.go  url.proto  url_test.go
session/: connect.go  controller.go  endpoint_local.go  endpoint_remote_client.go  endpoint_remote_protocol.go  ignore.go  service_messages.go  session.pb.go  session.proto
src/: hash.rs  lib.rs  process.rs  prompt.rs  tests.rs
src/daemon/: mod.rs
src/hash/: mod.rs  tests.rs
src/path/: mod.rs  tests.rs
src/proto/: mod.rs  sync.proto  sync.rs  time.proto  time.rs  url.rs
src/sync/: change.rs  conflict.rs  entry.rs  mod.rs  path.rs  tests.rs
src/sync/diff/: mod.rs  tests.rs
src/sync/reconcile/: mod.rs  tests.rs
src/sync/scan/: mod.rs  tests.rs
src/sync/scan/ignore/: mod.rs  tests.rs
src/sync/scan/sys/: mod.rs
src/sync/scan/sys/macos/: mod.rs  tests.rs
src/sync/sys/: mod.rs
src/sync/sys/macos/: mod.rs
src/time/: mod.rs  tests.rs
src/url/: messages.rs  mod.rs  tests.rs
sync/: ignore.go  ignore_test.go  scan.go  scan_test.go
