[package]
name = "mutagen"
version = "0.2.0"
authors = ["Jacob Howard <jacob@havoc.io>"]
description = """
Mutagen is a cross-platform, continuous, bidirectional file synchronization
utility designed to be simple, robust, and performant. It can operate locally or
over SSH.
"""
# TODO: Add a documentation entry. I'm not sure if we'd want to have this point
# to a rustdoc page (which would be expected but not useful) or the Mutagen
# usage guide.
homepage = "https://mutagen.io"
repository = "https://github.com/havoc-io/mutagen"
keywords = ["sync", "synchronization", "file", "rsync", "ssh"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license = "MIT"

[badges]
travis-ci = { repository = "havoc-io/mutagen" }
appveyor = { repository = "havoc-io/mutagen" }

[[bin]]
name = "mutagen"
path = "src/bin/mutagen/main.rs"
doc = false

# TODO: Once Cargo supports per-target dependencies, it would be nice to split
# this list up into common (i.e. those dependencies used by the library and
# binary) and binary-only. I don't think there would be any library-only
# dependencies.
[dependencies]
clap = "2.20.5"

[profile.release]
lto = true
