[package]
name = "mutagen"
version = "0.2.0"
authors = ["Jacob Howard <jacob@havoc.io>"]
description = """
Mutagen is a cross-platform, continuous, bidirectional file synchronization
utility designed to be simple, robust, and performant. It can operate locally or
over SSH.
"""
# TODO: Add a documentation entry. I'm not sure if we'd want to have this point
# to a rustdoc page (which would be expected but not useful) or the Mutagen
# usage guide.
homepage = "https://mutagen.io"
repository = "https://github.com/havoc-io/mutagen"
keywords = ["sync", "synchronization", "file", "rsync", "ssh"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license = "MIT"

[badges]
travis-ci = { repository = "havoc-io/mutagen" }
appveyor = { repository = "havoc-io/mutagen" }

[[bin]]
name = "mutagen"
path = "src/bin/mutagen/main.rs"
doc = false

[[bin]]
name = "mutagen-agent"
path = "src/bin/mutagen-agent/main.rs"
doc = false

# TODO: Once Cargo supports per-target dependencies, it would be nice to split
# this list up based on components. It doesn't really matter for now though,
# because Rust won't try to link in dependencies that aren't specified using
# "extern crate", so there's no real penalty for having this be the union of all
# dependencies.
[dependencies]
blake2-rfc = "0.2.17"
clap = "2.20.5"
error-chain = "0.10.0"
protobuf = "1.2.2"
sha1 = "0.2.0"

[profile.release]
lto = true
